<resources>
    <string name="app_name">TGTourism</string>
    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string-array name="navlist">
        <item>History</item>
        <item>Destinations</item>
        <item>Facebook</item>
        <item>Twitter</item>
        <item>Youtube</item>
        <item>Blog</item>
    </string-array>
    <string-array name="mainarray">
        <item>Divine Destinations</item>
        <item>Heritage Spots</item>
        <item>Nature Discovery</item>
        <item>Wild Life</item>
        <item>Adventure Journeys</item>
    </string-array>
    <string name="title_activity_scrolling">History of Telangana</string>
    <string name="contact_us_td">Telangana Tourism Department</string>
    <string name="contact_us_td_address">
        "“D” Block, 3rd Floor, Secretariat\n"
        "Hyderabad - 500 022\n"
        "Telangana, India."
    </string>
    <string name="contact_us_ttdc">
        Telangana Tourism Development Corporation
    </string>
    <string name="contact_us_ttdc_address">
        "3-5-891, Tourism House\n"
        "Himayatnagar, Hyderabad - 500 029,\n"
        "Telangana, India.\n"
        "Phone: +91-40-23262151, +91-40-23262152,\n"
        "+91-40-23262153, +91-40-23262154, +91-40-23262157\n"
        "Fax: +91-40-23261801."
    </string>
    <string name="birla_moreinfo">
        "<b>How to Reach</b>"
        "Birla Mandir is easily accessible by road as it located in the heart of Hyderabad city. Lakdi-ka-pul station is the nearest MMTS station, located one kilometer away."
    </string>
    <string name="birla_moreinfo_timings">
        "<b>Temple Timings</b>"
        "All days of the week"
        "7:00 AM to 12:00 PM"
        "3:00 PM to 9:00 PM"
    </string>
    <string name="birla_moreinfo_eat">
        "<b>Where to Eat</b>"
        "Tourists can please their taste buds with fast food, pani puri and tea close to the temple. Birla Mandir has many eateries and restaurants in the vicinity of the temple, downhill in Lakdi-ka-pul area."
    </string>
    <string name="birla_moreinfo_stay">
      "<b>Where to stay</b>"
        "Telangana Tourism  operates Plaza Hotel in Begumpet, Hyderabad for a comfortable stay. The Plaza hotel is ideal for the tourists who intend to stay in the core business district region of the busting city."
        "There are standard and deluxe A/C rooms and the interiors are world-class, designed aesthetically to attract tourists. The rooms are well maintained and the environs look pleasing. There is also a restaurent attached here offering quality food for the visitors at specified timings. Hoel the Plaza is built in signature style in the midst if the city and is a prominent hotel to Telangana tourism department. The well-laid titles and woodwork of suites are pleasing and indicate world-class construction methods employed to create a landmark hotel of the tourism department\n"
    </string>
    <string name="birla_moreinfo_phone">
        "<b>Phone numbers:</b>"
        "+91 95553833319"
        "+91 95538555560"
    </string>
    <string name="birla_moreinfo_land">
        "<b>Landline:</b>"
        "040-23450165"
    </string>
    <string name="jagannath_moreinfo">
        "<b>How to Reach</b>"
        "Jagannath temple, located in Banjara Hills, Hyderabad is accessible by road from different parts of the city."
    </string>
    <string name="jagannath_moreinfo_timings">
        "<b>Temple Timings</b>"
        "All days of the week"
        "6:00 AM - 11:00 AM"
        "5:00 PM - 9:00 PM"
    </string>
    <string name="jagannath_moreinfo_eat">
        "<b>Where to Eat</b>"
        "There are many restaurants located close by on Road No. 12 Banjara hills."
    </string>
    <string name="jagannath_moreinfo_stay">
      "<b>Where to stay</b>"
        "Telangana Tourism operates Plaza Hotel in Begumpet,located at distance of 6.4 kms from Jagannath temple is a comfortable stay. The Plaza hotel here is ideal for tourists visiting destinations in and around Hyderabad. There are standard and deluxe A/C rooms and the interiors are world-class, designed aesthetically to attract tourists. The rooms of the hotel are well-maintained, the environs look pleasing and this hotel is built in signature style in the midst of the city. There is also an attached restaurant here offering quality food for the visitors at specified timings. A prominent hotel of Telangana tourism, Plaza Hotel has well-laid tiles while the woodwork of suites indicate world-class construction, thereby creating a landmark hotel of the tourism department."
        "Haritha Taramathi baradari resort is located at a distance of 16.3kms from Jagannath temple,is an attractive destination in Hyderabad. The resort has an Open Air Auditorium, which is ideal for corporate gatherings and private events. It also has an Air Cooled Theatre and Banquet Hall that are a perfect fit for special events, conferences and exhibitions. It comes with an attached pantry, a multi cuisine A/C restaurant and a 50 PAX A/c Bar(saqi) for spending some quality time.The resort also has a souvenir shop and swimming pool that comes with a modern health club with best facilities for fitness and leisure. There are A/C suites and A/C rooms that can be an ideal way to enjoy luxury in the vicinity of a prominent monument. Spending time close to a heritage destination with best accommodation and quality food, with all trappings of a resort has never been this wonderful!"
    </string>
    <string name="jagannath_moreinfo_phone">
        "<b>Phone numbers:</b>"
        "+91-40-23303889"
        "+91-40-64525848"
    </string>
    <string name="yellamma_moreinfo">
        "<b>How to Reach</b>"
        "Balkampet Yellamma Temple, located close to Ameerpet-SR Nagar is in the heart of Hyderabad city and can be reached easily by road."
    </string>
    <string name="yellamma_moreinfo_timings">
        "<b>Temple Timings</b>"
        "All days of the week"
        "6:00 AM - 1:00 PM"
        "3:00 PM - 8:00 PM"
    </string>
    <string name="yellamma_moreinfo_eat">
        "<b>Where to Eat</b>"
        "There are many budget restaurants and hotels operating in SR nagar region, which tourists can visit."
    </string>
    <string name="yellamma_moreinfo_stay">
      "<b>Where to stay</b>"
        "Telangana Tourism operates Plaza Hotel in Begumpet,located at distance of 2.4 kms from Balkampet Yellamma Temple is a comfortable stay. The Plaza hotel here is ideal for tourists visiting destinations in and around Hyderabad. There are standard and deluxe A/C rooms and the interiors are world-class, designed aesthetically to attract tourists. The rooms of the hotel are well-maintained, the environs look pleasing and this hotel is built in signature style in the midst of the city. There is also an attached restaurant here offering quality food for the visitors at specified timings. A prominent hotel of Telangana tourism, Plaza Hotel has well-laid tiles while the woodwork of suites indicate world-class construction, thereby creating a landmark hotel of the tourism department."
        "Haritha Taramathi baradari resort is located at a distance of 17.8 kms from Balkampet Yellamma Temple,is an attractive destination in Hyderabad. The resort has an Open Air Auditorium, which is ideal for corporate gatherings and private events. It also has an Air Cooled Theatre and Banquet Hall that are a perfect fit for special events, conferences and exhibitions. It comes with an attached pantry, a multi cuisine A/C restaurant and a 50 PAX A/c Bar(saqi) for spending some quality time.The resort also has a souvenir shop and swimming pool that comes with a modern health club with best facilities for fitness and leisure. There are A/C suites and A/C rooms that can be an ideal way to enjoy luxury in the vicinity of a prominent monument. Spending time close to a heritage destination with best accommodation and quality food, with all trappings of a resort has never been this wonderful!"
    </string>
    <string name="yellamma_moreinfo_phone">
        "<b>Phone numbers:</b>"
        "+91-40-23704311"
    </string>
    <string name="mecca_moreinfo">
        "<b>How to Reach</b>"
        "Mecca Masjid, located few yards away from Charminar is at a distance of 5 km from the heart of Hyderabad and is easily accessible by road."
    </string>
    <string name="mecca_moreinfo_timings">
        "<b>Masjid Timings</b>"
        "All days of the week"
        "4:00 AM - 9:30 PM"
    </string>
    <string name="mecca_moreinfo_eat">
        "<b>Where to Eat</b>"
        "Visitors to Mecca Masjid can treat themselves to a range of food items right from irani chai, pani puri, lassi, fruit juices to delicious non-vegetarian fare served in the numerous food joints and hotels close to Charminar region."
    </string>
    <string name="mecca_moreinfo_stay">
      "<b>Where to stay\n</b>"
        "Telangana Tourism operates Plaza Hotel in Begumpet,located at distance of 12 kms from Mecca Masjid is a comfortable stay. The Plaza hotel here is ideal for tourists visiting destinations in and around Hyderabad. There are standard and deluxe A/C rooms and the interiors are world-class, designed aesthetically to attract tourists. The rooms of the hotel are well-maintained, the environs look pleasing and this hotel is built in signature style in the midst of the city. There is also an attached restaurant here offering quality food for the visitors at specified timings. A prominent hotel of Telangana tourism, Plaza Hotel has well-laid tiles while the woodwork of suites indicate world-class construction, thereby creating a landmark hotel of the tourism department."
        "Haritha Taramathi baradari resort is located at a distance of 12.4 kms from Mecca Masjid,is an attractive destination in Hyderabad. The resort has an Open Air Auditorium, which is ideal for corporate gatherings and private events. It also has an Air Cooled Theatre and Banquet Hall that are a perfect fit for special events, conferences and exhibitions. It comes with an attached pantry, a multi cuisine A/C restaurant and a 50 PAX A/c Bar(saqi) for spending some quality time.The resort also has a souvenir shop and swimming pool that comes with a modern health club with best facilities for fitness and leisure. There are A/C suites and A/C rooms that can be an ideal way to enjoy luxury in the vicinity of a prominent monument. Spending time close to a heritage destination with best accommodation and quality food, with all trappings of a resort has never been this wonderful!"
    </string>
    <string name="mecca_moreinfo_phone">
        "<b>Phone numbers:\n</b>"
        "+91-40-66745986"
    </string>
    <string name="view_in_map">View in Map</string>
</resources>