<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cff2e2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.gudla.tgtourism.hyd.yellamma.YellammaMoreInfoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#758692"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eff996"
                android:text="@string/view_in_map"
                android:textSize="20sp"
                android:id="@+id/yellammamap"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardBackgroundColor="#f7fcc5"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/yellamma_moreinfo"
                android:textSize="20sp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#f7fcc5"
            app:cardCornerRadius="2dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/yellamma_moreinfo_timings"
                android:textSize="20sp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#f7fcc5"
            app:cardCornerRadius="2dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/yellamma_moreinfo_eat"
                android:textSize="20sp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#f7fcc5"
            app:cardCornerRadius="2dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/yellamma_moreinfo_stay"
                android:textSize="20sp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#f7fcc5"
            app:cardCornerRadius="2dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/yellamma_moreinfo_phone"
                android:textSize="20sp"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>